@@ -1,3 +1,9 @@
+2001-09-15  Yves Kurz <kurzy1@isbiel.ch>
+
+	* infoview.c: Changed the frame alignment to default.
+	* interface.c: ditto
+	* procdialogs.c: ditto
+
 2001-09-14  Kevin Vandersloot <kfv101@psu.edu>
 
 	Add a command line argument to run procman in a simple view.
